--- a/src/app/components/nav/header.component.html
+++ b/src/app/components/nav/header.component.html
@@ -5,6 +5,6 @@
 </div>
 <i id="btnAddProject" class="fa fa-plus fa-2x" onclick="alert('Add new project...');" 
     aria-hidden="true"></i>
-<i *ngIf="!showStats" id="btnStats" (click)="toggleStats(showStats=true)" 
+<i *ngIf="!showStatsDash" id="btnStats" (click)="toggleStats()" 
     class="fa fa-line-chart fa-2x" title="Show Stats"
     aria-hidden="true"></i>
