--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSearch(searchForm)" #searchForm="ngForm">
+<form *ngIf="!showPreFilledSearch" (ngSubmit)="onSearch(searchForm)" #searchForm="ngForm">
     <div class="user-data">
 
         <div class="form-group">
@@ -50,7 +50,67 @@
 
         <div class="form-group">
             <label for="budget">Max Budget</label>
-            <input type="number" id="budget" class="form-control" ngModel name="budget">
+            <input type="number" id="budget" class="form-control" [ngModel]="qsBudget" name="budget">
+        </div>
+
+        <button type="submit" class="btn btn-primary">Search</button>
+    </div>
+</form>
+
+<form *ngIf="showPreFilledSearch" (ngSubmit)="onSearch(searchForm)" #searchForm="ngForm">
+    <div class="user-data">
+
+        <div class="form-group">
+            <label for="title">Title</label>
+            <input type="text" id="title" class="form-control" [ngModel]="qsTitle" name="title">
+        </div>
+
+        <div class="form-group">
+            <div id="createDate" class="fltLt mgRt10">
+                <label for="created">Created Date Range</label><br/>
+                <my-date-range-picker id="createdRange" name="createdRange" [options]="myDateRangePickerOptions" 
+                [(ngModel)]="modelCreate">
+                </my-date-range-picker>
+            </div>
+            <div id="modifiedDate" class="fltLt">
+                <label for="modified">Modified Date Range</label><br/>
+                <my-date-range-picker id="modifiedRange" name="modifiedRange" [options]="myDateRangePickerOptions" [(ngModel)]="modelModified">
+                </my-date-range-picker>
+            </div>
+
+        </div>
+        <div style="clear:both;"></div>
+        <div class="form-group">
+            <label for="division">Division</label>
+            <select *ngIf="options.division.length > 0" id="division" class="form-control" [ngModel]="defaultDivVal" name="division">
+                <option *ngFor="let option of options.division"
+                    value="{{ option.value }}">
+                    {{ option.option }}
+                </option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="projOwner">Project Owner</label>
+            <select *ngIf="options.project_owner.length > 0" id="projOwner" class="form-control" [ngModel]="defaultProjOwnVal" name="project_owner">
+                <option *ngFor="let option of options.project_owner"
+                    value="{{ option.value }}">
+                    {{ option.option }}
+                </option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="status">Status</label>
+            <select *ngIf="options.status.length > 0" id="status" class="form-control" [ngModel]="defaultStatusVal" name="status">
+                <option *ngFor="let option of options.status"
+                    value="{{ option.value }}">
+                    {{ option.option }}
+                </option>
+            </select>
+        </div>
+
+        <div class="form-group">
+            <label for="budget">Max Budget</label>
+            <input type="number" id="budget" class="form-control" [ngModel]="qsBudget" name="budget">
         </div>
 
         <button type="submit" class="btn btn-primary">Search</button>
