--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,4 +1,4 @@
-<table class="table table-striped table-hover table-bordered table-striped">
+<table [class.searchResults]="!statsTable" class="table table-striped table-hover table-bordered table-striped">
     <thead *ngIf="headers">
         <tr>
             <td *ngFor="let head of headers">
@@ -6,10 +6,8 @@
             </td>
         </tr>
     </thead>
-
     <tbody>
-
-        <tr *ngFor="let project of values" (click)="getDetails(project)" [style.cursor]="isResultsTable ? 'pointer': 'normal'">
+        <tr *ngFor="let project of values" (click)="emitDetails(project)" [style.cursor]="isResultsTable ? 'pointer': 'normal'">
             <td *ngFor="let key of keys">
                 {{ project[key] }}
             </td>
