--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-  <div class="row"> 
+  <div class="row">
     <pd-header (notifyHome)="toggleStatsDash($event)"></pd-header>
   </div>
   <div class="row">
-    <pd-home (notifyHeader)="toggleStatsBtn($event)"></pd-home>
+    <router-outlet></router-outlet>    
   </div>
 </div>
